# KbWarrior

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: map.hpp  tile.hpp
include/core/: Game.hpp  Scene.hpp  SceneManager.hpp
include/resources/: FontRAII.hpp  MusicRAII.hpp  SoundRAII.hpp  TextureRAII.hpp
include/scenes/: GameplayScene.hpp  MenuScene.hpp  PauseScene.hpp
scripts/: build.sh  run.sh
src/: main.cpp  map.cpp  map_input.txt  tile.cpp
src/core/: Game.cpp  SceneManager.cpp
src/resources/: FontRAII.cpp  MusicRAII.cpp  SoundRAII.cpp  TextureRAII.cpp
src/scenes/: MenuScene.cpp
